--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+# .gitignore (ensure secrets.toml is ignored)
+.streamlit/secrets.toml
+
+
+# requirements.txt (updated to include the openai package)
 streamlit
 pandas
-openpyxl 
 openai
